--- a/readit/server/static/css/style.css
+++ b/readit/server/static/css/style.css
@@ -1,13 +1,25 @@
 body {
   margin: 0;
+  padding-top: 10px;
   font-size: 16px;
+  background-image: url("/images/home-background.jpg");
+}
+
+h4 {
+  color: black;
+  font-weight: bold;
+  text-decoration: none;
+  transition: color 0.4s;
+  font-size: 15px;
 }
 
 a {
   color: #00bcd4;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
   font-weight: bold;
   text-decoration: none;
   transition: color 0.4s;
+  font-size: 35px;
 }
 
 a:hover {
