--- a/readit/server/static/css/style.css
+++ b/readit/server/static/css/style.css
@@ -20,6 +20,7 @@ a {
   text-decoration: none;
   transition: color 0.4s;
   font-size: 35px;
+  font-family: 'Audiowide', cursive; 
 }
 
 a:hover {
@@ -100,5 +101,5 @@ ul {
   padding: 5px;
   padding-bottom: 5px;
   margin: 5px;
+  border-radius: 5px;
 }
-
