--- a/readit/server/static/css/style.css
+++ b/readit/server/static/css/style.css
@@ -16,11 +16,12 @@ h4 {
 a {
   color: #00bcd4;
   text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-  font-weight: bold;
+ 
   text-decoration: none;
   transition: color 0.4s;
-  font-size: 35px;
-  font-family: 'Audiowide', cursive; 
+  font-size: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif
+  
 }
 
 a:hover {
@@ -123,4 +124,72 @@ h1 {
   padding-bottom: 5px;
   margin: 5px;
   border-radius: 5px;
+}
+
+.card {
+  background: #fff;
+  border-radius: 2px;
+  height: 325px;
+  margin: 0.5rem;
+  position: relative;
+  width: 270px;
+  box-shadow: 0 3px 6px #999, 0 3px 6px #999;
+  text-align: left;
+  }
+
+.card > .img-container {
+  height: 42%;
+  overflow: hidden;
+  text-align: center;
+  background:rgb(145, 228, 215);
+  padding:10px
+}
+.card > .img-container > img {
+  width: 30%;
+  
+  
+}
+
+.card > .content {
+  padding-left: 0.1rem;
+  padding-right: 0.5rem;
+  font-size: 10px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif
+}
+
+.card > .content > ul {
+  list-style-type: none;
+}
+
+.card > .content > ul > li {
+  margin-top: 5px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 12px;
+}
+.span button {
+  position: absolute;
+}
+.title {
+  width: 100%;
+  text-align: center;
+  font-size: 3rem;
+  
+  color: #2A77AE;
+  margin-bottom: 50px;
+}
+.wrapper {
+  padding-top: 20px;
+  background: #ECEFF1;
+  height: 100%;
+  display: flex;
+  flex-flow: row wrap;
+  padding: 30px;
+  justify-content: space-around;
+  align-content: flex-start;
+  overflow: auto;
+}
+
+.card > .content > ul > li > a {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 12px;
 }
